--- a/templates/homepage/list.html
+++ b/templates/homepage/list.html
@@ -38,15 +38,15 @@ window.onload = function ()
 <header>
   <div class="tophead">
     <div class="logo"><a href="/">推送与更新</a></div>
-    <div id="mnav">
-      <h2><span class="navicon"></span></h2>
-      <ul>
-        <li><a href="{% url  "test" %}">网站首页</a></li>
+{#    <div id="mnav">#}
+{#      <h2><span class="navicon"></span></h2>#}
+{#      <ul>#}
+{#        <li><a href="{% url  "test" %}">网站首页</a></li>#}
 {#        <li><a href="about.html">类别</a></li>#}
-        <li><a href="share.html">关于我</a></li>
-
-      </ul>
-    </div>
+{#        <li><a href="share.html">关于我</a></li>#}
+{##}
+{#      </ul>#}
+{#    </div>#}
     <nav class="topnav" id="topnav">
       <ul>
         <li><a href="{% url  "test" %}">网站首页</a></li>
